// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web3 reducer account 1`] = `
Object {
  "account": "test",
  "custodianTokenBalances": Object {},
  "custodians": Object {},
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 0,
}
`;

exports[`web3 reducer custodian 1`] = `
Object {
  "account": "test",
  "custodianTokenBalances": Object {
    "custodian": Object {
      "code": Object {
        "allowance": 789,
        "balance": 123,
      },
    },
  },
  "custodians": Object {
    "custodian": Object {
      "code": "custodianCode",
      "states": "custodianStates",
    },
  },
  "ethBalance": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
  "network": 123,
}
`;

exports[`web3 reducer default 1`] = `
Object {
  "account": "0x0000000000000000000000000000000000000000",
  "custodianTokenBalances": Object {},
  "custodians": Object {},
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 0,
}
`;

exports[`web3 reducer ethBalance 1`] = `
Object {
  "account": "test",
  "custodianTokenBalances": Object {},
  "custodians": Object {},
  "ethBalance": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
  "network": 123,
}
`;

exports[`web3 reducer network 1`] = `
Object {
  "account": "test",
  "custodianTokenBalances": Object {},
  "custodians": Object {},
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 123,
}
`;

exports[`web3 reducer tokenBalance 1`] = `
Object {
  "account": "test",
  "custodianTokenBalances": Object {
    "custodian": Object {
      "code": Object {
        "allowance": 789,
        "balance": 123,
      },
    },
  },
  "custodians": Object {},
  "ethBalance": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
  "network": 123,
}
`;
